# project_scanner

./: CMakeLists.txt  Readme.md  base.csv
src/scanner_core/: CMakeLists.txt  md5_calculator.h  scanner_core.cpp  scanner_core.h
src/scanner_main/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test_md5_calculator.cpp  test_scanner_core.cpp  test_utils.h
